# volume_control_for_voicemeeter

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: eco_mode.rs  main.rs  voicemeeter.rs  volume_curves.rs  volume_state_type.rs  windows_eco_mode.rs  windows_volume.rs
