[package]
name = "volume_control_for_voicemeeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lerp = "0.5.0"
smol = "1.3.0"
thiserror = "1.0.48"
tokio-graceful = "0.1.5"
voicemeeter = "0.2.0"

[dependencies.windows]
version = "0.51"
features = [
	"implement",
	# "Foundation_Collections",
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_System_Com_StructuredStorage",
	"Win32_Devices_FunctionDiscovery",
	"Win32_Devices_Properties",
	# "Win32_Storage",
	# "Win32_Globalization",
	# "Win32_System_Memory",
	"Win32_System_Threading",
	"Win32_System_Variant",
]

[patch.crates-io.voicemeeter]
git = "https://github.com/Emilgardis/voicemeeter-sdk-rs.git"
