[package]
name = "volume_control_for_voicemeeter"
version = "0.1.2"
edition = "2024"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
lerp = "0.5.0"
smol = "2.0.2"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync"] }
tokio-graceful = "0.2.2"
tray-icon = "0.20.0"
voicemeeter = "0.3.0"
win-msgbox = "0.2.1"
winit = "0.30.9"
windows-core = "0.61.0"

[dependencies.windows]
version = "0.61.1"
features = [
	# "implement",
	# "Foundation_Collections",
	"Win32_Foundation",
	"Win32_System_Com",
	"Win32_Media_Audio",
	"Win32_Media_Audio_Endpoints",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_System_Com_StructuredStorage",
	"Win32_Devices_FunctionDiscovery",
	"Win32_Devices_Properties",
	# "Win32_Storage",
	# "Win32_Globalization",
	# "Win32_System_Memory",
	"Win32_System_Threading",
	"Win32_System_Variant",
	"Win32_System_Console",
]
